--- a/jollix/public_html/de/de_download.html
+++ b/jollix/public_html/de/de_download.html
@@ -58,17 +58,18 @@
 				<b>Download Mirrors:</b><br>
 				<ul>
 
-<!--
+
 					<li>Germany:<br>
-					Berlin: <br>
+					Berlin:
 					<a href="ftp://ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix">ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix</a><br>
-					Frankfurt: <a href="ftp://ftp.serveroase.com/jollix_de/0.2/">ftp://ftp.serveroase.com/jollix_de/</a><br>
+					Frankfurt: <a href="ftp://ftp.serveroase.com/jollix_de/0.2.1">ftp://ftp.serveroase.com/jollix_de/</a><br>
+					<!--
 					Göttingen: <a href="ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix">ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix</a></li>
+					-->
 					<li>Netherlands:<br>
 					NLUUG: <a href="ftp://ftp.nluug.nl/pub/metalab/distributions/jollix">ftp://ftp.nluug.nl/pub/metalab/distributions/jollix</a><br></li>
 					<li>Poland:<br>
 					Warsaw: <a href="ftp://sunsite.icm.edu.pl/pub/Linux/sunsite.unc.edu/distributions/jollix">ftp://sunsite.icm.edu.pl/pub/Linux/sunsite.unc.edu/distributions/jollix</a><br></li>
-					-->
 					<li>North America:<br>
 					Atlanta: <a href="ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/jollix">ftp://ftp-linux.cc.gatech.edu/pub/linux/distributions/jollix</a><br>
 					ibiblio: <a href="ftp://ibiblio.org/pub/linux/distributions/jollix">ftp://ibiblio.org/pub/linux/distributions/jollix</a></li>
