*** empty log message ***

--- a/jollix/public_html/de/de_docu.html
+++ b/jollix/public_html/de/de_docu.html
@@ -953,7 +953,7 @@ gateway="eth0/192.168.0.1"
 </td></tr></table></li><br>
 <li>2. /etc/resolv.conf öffnen.<br>In dieser Datei wird die IP Adresse des DNS Servers eingetragen.<br>
 <table class="ncontent" width="100%" border="0" cellspacing="0" cellpadding="0"><tr><td bgcolor="#dbdbdb">
-<p class="note"><b>/etc/conf.d/net:</b></p>
+<p class="note"><b>/etc/resolv.conf:</b></p>
 <pre>nameserver 192.168.0.1
 </pre>
 </td></tr></table></li><br>
