*** empty log message ***

--- a/jollix/public_html/de/de_about.html
+++ b/jollix/public_html/de/de_about.html
@@ -64,6 +64,8 @@
 	noch nicht möglich. Erfahrenere Leute können jedoch jetzt schon jollix auf der Festplatte installieren, dazu gibt es in der Dokumentation eine <a href="de_docu.html#installation">Anleitung</a>.
 
 	<h4>Was ist jollix nicht?</h4>
+	Jollix ist nicht käuflich! Die Entwickler untersagen
+	eine kommerzielle entgeltliche Weiterdistribution, sei es auch nur für einen geringen Betrag, z.B. EUR 5,- für Versandkosten.<br><br>
 	Jollix hat nichts mit
 	<a href="http://jargon.watson-net.com/jargon.asp?prn=1&w=jolix">jolix</a>,
 	dem Freeware Port des BSD Net/2 Systems auf die Intel i386 Architektur von
