--- a/jollix/public_html/de/de_download.html
+++ b/jollix/public_html/de/de_download.html
@@ -43,6 +43,9 @@
 	<table>
 		<tr>
 			<td valign="top">
+				<p>HINWEIS: Jollix ist nicht käuflich! Die Entwickler untersagen
+				eine kommerzielle entgeltliche Weiterdistribution, sei es auch
+				nur für einen geringen Betrag, z.B. EUR 5,- für Versandkosten.</p>
 				<b>Aktuelle Version:</b><br>
 				<ul>
 					<li><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2.1</a> [26.10.2003] ~500MB (berlios.de)
