*** empty log message ***

--- a/jollix/public_html/en/en_download.html
+++ b/jollix/public_html/en/en_download.html
@@ -43,6 +43,7 @@
 	<table>
 		<tr>
 			<td valign="top">
+			<p>Important information: A Commercial redistribution of jollix linux livecd is not allowed.</p> 
 				<b>Latest version:</b><br>
 
 				<ul>
@@ -55,11 +56,11 @@
 				<ul>
 
 					<li>Germany:<br>
-					Frankfurt: <a href="ftp://ftp.serveroase.com/jollix_de/0.2.1/">ftp://ftp.serveroase.com/jollix_de/</a><br>
+					Göttingen: <a href="ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix">ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix</a></li>
 					<!--
+					Frankfurt: <a href="ftp://ftp.serveroase.com/jollix_de/0.2.1/">ftp://ftp.serveroase.com/jollix_de/</a><br>
 					Berlin:
 					<a href="ftp://ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix">ftp.fu-berlin.de/unix/linux/mirrors/sunsite.unc.edu/distributions/jollix</a><br>
-					Göttingen: <a href="ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix">ftp://ftp.gwdg.de/pub/linux/mirrors/sunsite/distributions/jollix</a></li>
 					-->
 					<li>Netherlands:<br>
 					NLUUG: <a href="ftp://ftp.nluug.nl/pub/metalab/distributions/jollix">ftp://ftp.nluug.nl/pub/metalab/distributions/jollix</a><br></li>
