--- a/jollix/public_html/en/en_docu.html
+++ b/jollix/public_html/en/en_docu.html
@@ -496,7 +496,7 @@ Syncing disks.
 <tr><td class="infohead" bgcolor="#eec625"><p>
 3.1: Boot Partition (hda1) formatieren, Befehl: mke2fs</p></td></tr>
 <tr><td bgcolor="#000000"><pre>
-<span class="redtext">jollix</span><span class="bluetext"> m&aumlnt # </span><span class="whitetext">mke2fs /dev/hda1</span>
+<span class="redtext">jollix</span><span class="bluetext"> mnt # </span><span class="whitetext">mke2fs /dev/hda1</span>
 </pre></td></tr>
 </table>
 
