*** empty log message ***

--- a/jollix/public_html/en/en_docu.html
+++ b/jollix/public_html/en/en_docu.html
@@ -10,7 +10,7 @@
 
 <body link="#4379A0" alink="#62B1EA" vlink="#4D989D">
 <div id="text">
-	<table bgcolor="#DBF4FF" border="0" width="100%">
+	<table bgcolor="#f2f2f2" border="0" width="100%">
 		<tr>
 			<td width="263" valign="top" align="right">
 				<a href="en_home.html"><img src="../img/jollix-logo-128pt-blue2.jpg" alt="jollix" border="0"></a>
