--- a/jollix/public_html/de/de_docu.html
+++ b/jollix/public_html/de/de_docu.html
@@ -10,7 +10,7 @@
 
 <body link="#4379A0" alink="#62B1EA" vlink="#4D989D">
 <div id="text">
-	<table bgcolor="#DBF4FF" border="0" width="100%">
+	<table bgcolor="#f2f2f2" border="0" width="100%">
 		<tr>
 			<td width="263" valign="top" align="right">
 				<a href="de_home.html"><img src="../img/jollix-logo-128pt-blue2.jpg" alt="jollix" border="0"></a>
@@ -968,7 +968,7 @@ NVidia Treiber laden, Befehl modprobe</p></td></tr>
 <table class="ncontent" width="100%" border="0" cellspacing="0" cellpadding="0"><tr><td bgcolor="#dbdbdb">
 <p class="note"><b></b></p>
 <pre># /etc/modules.autoload.d/kernel-2.6:  kernel modules to load when system boots.
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/jollix/Repository/jollix/public_html/de/de_docu.html,v 1.12 2004/04/24 10:32:33 knochen Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/jollix/Repository/jollix/public_html/de/de_docu.html,v 1.13 2004/05/07 19:49:13 knochen Exp $
 #
 # Note that this file is for 2.6 kernels.
 #
@@ -982,24 +982,102 @@ nvidia
 </pre>
 </td></tr></table>
 <p>Die NVidia Treiber sind jetzt vollständig installiert. Möchte man die Treiber und die OpenGL Umgebung direkt ohne Neustart des Rechners aktivieren, muss man nur die Oberfläche neu starten. Befindet man sich im KDE, sollte man sich vorher abmelden und am Anmeldedialog angekommen X neu starten. Dies erreicht man mit der Tastenkombination [Strg]+[Alt]+[Backspace].</p>
-<p>Zum Schluss noch einige Worte zur Konfiguartionsdatei XF86Config-4:<br>
-Die Konfigurationsdatei XF86Config-4 wird beim ersten Booten von der Festplatte automatisch angelegt, allerdings nur einmal. Besteht diese Datei bereits (nämlich ab dem 2. Booten), erkennt das die Autokonfiguration, so dass die vorhandene Datei nicht neu überschrieben wird und so die Einstellungen verloren gehen. Die Datei wird demnach nach dem ersten Booten von der Festplatte dynamisch erzeugt und kann dann auch zusätzlich bearbeitet werden. Tritt ein Fehler bei der Bearbeitung auf und die grafische Oberfläche lässt sich im Anschluss nicht mehr starten, kann die XF86Config-4 auch gelöscht bzw. umbenannt werden und jollix legt die Datei beim nächsten Booten wieder neu an mit den original Einstellungen. Man kann die Datei auch von Hand neu generieren, nachdem man sie gelöscht hat, mit dem Skript <span class="shell">mkxf86config.sh</span> (als root). Dieses Skript wird auch beim Booten aufgerufen und erstellt dann die neue XF86Config-4.</p>
+<p>Zum Schluss noch einige Worte zur Konfiguartionsdatei xorg.conf:<br>
+Die Konfigurationsdatei xorg.conf wird beim ersten Booten von der Festplatte automatisch angelegt, allerdings nur einmal. Besteht diese Datei bereits (nämlich ab dem 2. Booten), erkennt das die Autokonfiguration, so dass die vorhandene Datei nicht überschrieben wird und so die Einstellungen verloren gehen. Die Datei wird demnach nach dem ersten Booten von der Festplatte dynamisch erzeugt und kann dann auch zusätzlich bearbeitet werden. Tritt ein Fehler bei der Bearbeitung auf und die grafische Oberfläche lässt sich im Anschluss nicht mehr starten, kann die xorg.conf auch gelöscht bzw. umbenannt werden und jollix legt die Datei beim nächsten Booten wieder neu an mit den original Einstellungen. Man kann die Datei auch von Hand neu generieren, nachdem man sie gelöscht hat, mit dem Skript <span class="shell">mkxorgconf.sh</span> (als root). Dieses Skript wird auch beim Booten aufgerufen und erstellt dann die neue xorg.conf.</p>
 <table class="ncontent" width="100%" border="0" cellspacing="0" cellpadding="0"><tr><td bgcolor="#dbdbdb">
 <p class="note"><b></b></p>
-<pre>jollix # mkxf86config.sh
- Video is nVidia Corporation|NV5M64 [RIVA TNT2 Model 64/Model 64 Pro], using XFree86(nv) Server
+<pre>jollix # mkxorgconf.sh
+ Video is nVidia Corporation|NV5M64 [RIVA TNT2 Model 64/Model 64 Pro], using XOrg-X11(nv) Server
  Monitor is Generic Monitor, H:28.0-96.0kHz, V:50.0-75.0Hz
  Using Modes "1024x768" "800x600" "640x480"
 </pre>
 </td></tr></table>
-<p>Hat man bereits die original NVidia Treiber installiert, so wie oben beschrieben, dann aber die XF86Config-4 nachträglich selbst editiert und wegen eines Fehlers gelöscht und wieder neu angelegt mit mkxf86config.sh, fehlen die NVidia spezifischen Angaben. Diese kann man auf einfache Weise durch den Aufruf von <span class="shell">opengl-update nvidia</span> auch noch nachträglich wieder setzen lassen, die Treiber müssen <b>nicht</b> wieder von neu installiert werden. Weiterhin noch zu erwähnen ist die NVidia Option "NVAGP" die von jollix automatisch auf "2" in der XF86Config-4 gesetzt wird. Mit dem Wert "2" wird festgelegt, dass der langsamere aber stabilere AGP Treiber des Linux Kernels und nicht der schnellere aber absturzgefährdete NVidia Linux AGP Treiber benutzt werden soll. Informationen zum momentan verwendeten AGP Treiber findet man mit cat /proc/driver/nvidia/agp/status<br>Informationen zum NVidia Treiber und OpenGL liefert das Programm <span class="shell">glxinfo</span> (von Interesse ist die Zeile: direct rendering: Yes), das Programm <span class="shell">xvinfo</span> gibt Auskunft über die Video Extensions und  <span class="shell">glxgears</span> startet eine kleine OpenGL 3D Animation, die aber auch ohne OpenGL Unterstützung des Grafikkartentreibers funktioniert, dann allerdings viel langsamer läuft wegen der fehlenden Hardwareunterstützung.</p>
+<p>Hat man bereits die original NVidia Treiber installiert, so wie oben beschrieben, dann aber die xorg.conf nachträglich selbst editiert und wegen eines Fehlers gelöscht und wieder neu angelegt mit mkxorgconf.sh, fehlen die NVidia spezifischen Angaben. Diese kann man auf einfache Weise durch den Aufruf von <span class="shell">opengl-update nvidia</span> auch noch nachträglich wieder setzen lassen, die Treiber müssen <b>nicht</b> wieder von neu installiert werden. Weiterhin noch zu erwähnen ist die NVidia Option "NVAGP" die von jollix automatisch auf "2" in der xorg.conf gesetzt wird. Mit dem Wert "2" wird festgelegt, dass der langsamere aber stabilere AGP Treiber des Linux Kernels und nicht der schnellere aber absturzgefährdete NVidia Linux AGP Treiber benutzt werden soll. Informationen zum momentan verwendeten AGP Treiber findet man mit cat /proc/driver/nvidia/agp/status<br>Informationen zum NVidia Treiber und OpenGL liefert das Programm <span class="shell">glxinfo</span> (von Interesse ist die Zeile: direct rendering: Yes), das Programm <span class="shell">xvinfo</span> gibt Auskunft über die Video Extensions und  <span class="shell">glxgears</span> startet eine kleine OpenGL 3D Animation, die aber auch ohne OpenGL Unterstützung des Grafikkartentreibers funktioniert, dann allerdings viel langsamer läuft wegen der fehlenden Hardwareunterstützung.</p>
 
+<p class="chaphead2"><span class="chapnum">7.4</span>ATI Grafikkartentreiber installieren</p>
+<p>Die Installation der original ATI Treiber unter Gentoo/jollix ist schnell und einfach durchgeführt. Es muss nur ein Paket installiert werden, das den original ATI Kernel Treiber und die ATI OpenGL Umgebung enthält.<br>Vorher sollte man noch ein emerge rsync durchführen, sofern man dies nicht bereits beim Abschluss der Installation getan hat, um die Installationsskripte auf den aktuellen Stand zu bringen. Voraussetzung für die folgende Installation ist, dass man als root an einer Konsole angemeldet ist (su-) und eine Internetverbindung besteht.</p>
+<table class="ntable" width="100%" cellspacing="0" cellpadding="0" border="0">
+<tr><td class="infohead" bgcolor="#eec625"><p>
+ATI Treiber installieren, Befehl emerge mit Schalter -p</p></td></tr>
+<tr><td bgcolor="#000000"><pre>
+<span class="redtext">jollix</span><span class="bluetext"> / # </span><span class="whitetext">emerge -p ati-drivers</span>
+</pre>
+</td></tr>
+</table>
+<table class="ncontent" width="100%" border="0" cellspacing="0" cellpadding="0"><tr><td bgcolor="#dbdbdb">
+<p class="note"><b>emerge mit Schalter -p</b></p>
+<pre>These are the packages that I would merge, in order:
 
-
-
-
-
-
+Calculating dependencies ...done!
+[ebuild  N    ] media-video/ati-drivers-3.2.8-r1
+</pre>
+</td></tr></table>
+<p>Hier meldet emerge, dass die Version 3.2.8-r1 der ATI Treiber neu installiert werden soll, zu erkennen an [ebuild  N    ]<br>Wiederholt man emerge ohne den Schalter -p, wird die Installation durchgeführt.<br>Die von emerge vorgeschlagene Version des ATI Treibers entspricht sehr wahrscheinlich nicht der aktuellsten von ATI freigegeben Version. Dies bedeutet allerdings nicht, dass diese nicht unter Gentoo/jollix installierbar ist, sondern die von emerge -p vorgeschlagene Version entspricht vielmehr der von Gentoo momentan als stabil freigegebenen Version.<br>Möchte man die aktuellste (jedoch noch als nicht stabil maskierte) Version der Treiber installieren, so muss man vor dem nächsten Schritt die Umgebungsvariable ACCEPT_KEYWORDS auf "~x86" setzen. Hierbei riskiert man, dass evtl. Fehler und Instabilitäten auftreten, man stellt jedoch sicher, dass die in Portage als letztes verfügbare Version des Treibers installiert wird. Nachdem man die Umgebungsvariable gesetzt hat, bleibt diese bis zum Schließen der Konsole aktiv.</p>
+<table class="ntable" width="100%" cellspacing="0" cellpadding="0" border="0">
+<tr><td class="infohead" bgcolor="#eec625"><p>
+ATI Treiber installieren, Befehl emerge</p></td></tr>
+<tr><td bgcolor="#000000"><pre>
+<span class="redtext">jollix</span><span class="bluetext"> / # </span><span class="whitetext">export ACCEPT_KEYWORDS="~x86"</span>
+</pre>
+</td></tr>
+<tr><td bgcolor="#000000"><pre>
+<span class="redtext">jollix</span><span class="bluetext"> / # </span><span class="whitetext">emerge ati-drivers</span>
+</pre>
+</td></tr>
+</table>
+<table class="ncontent" width="100%" border="0" cellspacing="0" cellpadding="0"><tr><td bgcolor="#dbdbdb">
+<p class="note"><b></b></p>
+<pre>Calculating dependencies ...done!
+>>> emerge (1 of 1) media-video/ati-drivers-3.7.6-r1 to /
+>>> Downloading ftp://gentoo.inode.at/source/distfiles/fglrx-4.3.0-3.7.6.i386.rpm
+--14:44:09--  ftp://gentoo.inode.at/source/distfiles/fglrx-4.3.0-3.7.6.i386.rpm
+           => `/usr/portage/distfiles/fglrx-4.3.0-3.7.6.i386.rpm'
+Resolving gentoo.inode.at... 81.223.20.162
+Connecting to gentoo.inode.at[81.223.20.162]:21... connected.
+Logging in as anonymous ... Logged in!
+==> SYST ... done.    ==> PWD ... done.
+==> TYPE I ... done.  ==> CWD /source/distfiles ... done.
+==> PASV ... done.    ==> RETR fglrx-4.3.0-3.7.6.i386.rpm ... done.
+Length: 3,380,217 (unauthoritative)
+</pre>
+</td></tr></table>
+<p>Hierbei holt emerge automatisch die Installationsdatei aus dem Internet, packt diese aus und führt die Installation im System durch.</p>
+<table class="ncontent" width="100%" border="0" cellspacing="0" cellpadding="0"><tr><td bgcolor="#dbdbdb">
+<p class="note"><b></b></p>
+<pre>>>> media-video/ati-drivers-3.7.6-r1 merged.
+>>> Recording media-video/ati-drivers in "world" favorites file...
+</pre>
+</td></tr></table>
+<p>Nun muss noch die ATI OpenGL Umgebung aktiviert werden.</p>
+<table class="ntable" width="100%" cellspacing="0" cellpadding="0" border="0">
+<tr><td class="infohead" bgcolor="#eec625"><p>
+ATI OpenGL aktivieren, Befehl opengl-update</p></td></tr>
+<tr><td bgcolor="#000000"><pre>
+<span class="redtext">jollix</span><span class="bluetext"> / # </span><span class="whitetext">opengl-update ati</span>
+</pre>
+</td></tr>
+</table>
+<p>Die ATI OpenGL Umgebung für X11 wurde nun aktiviert. Der zuvor geladene Kernel Radeon Treiber muss vor der Aktivierung des original ATI Treibers fglrx noch deaktiviert werden.</p>
+<table class="ntable" width="100%" cellspacing="0" cellpadding="0" border="0">
+<tr><td class="infohead" bgcolor="#eec625"><p>
+Kernel  radeon Modul deaktivieren, Befehl rmmod</p></td></tr>
+<tr><td bgcolor="#000000"><pre>
+<span class="redtext">jollix</span><span class="bluetext"> / # </span><span class="whitetext">rmmod radeon</span>
+</pre>
+</td></tr>
+</table>
+<p>Die ATI Treiber sind jetzt vollständig installiert. Möchte man die Treiber und die OpenGL Umgebung direkt ohne Neustart des Rechners aktivieren, muss nur noch die Oberfläche neu gestartet werden. Befindet man sich im KDE, sollte man sich vorher abmelden und am Anmeldedialog angekommen X neu starten. Dies erreicht man mit der Tastenkombination [Strg]+[Alt]+[Backspace].</p>
+<p>Zum Schluss noch einige Worte zur Konfiguartionsdatei xorg.conf:<br>
+Die Konfigurationsdatei xorg.conf wird beim ersten Booten von der Festplatte automatisch angelegt, allerdings nur einmal. Besteht diese Datei bereits (nämlich ab dem 2. Booten), erkennt das die Autokonfiguration, so dass die vorhandene Datei nicht neu überschrieben wird und so die Einstellungen verloren gehen. Die Datei wird demnach nach dem ersten Booten von der Festplatte dynamisch erzeugt und kann dann auch zusätzlich bearbeitet werden. Tritt ein Fehler bei der Bearbeitung auf und die grafische Oberfläche lässt sich im Anschluss nicht mehr starten, kann die xorg.conf auch gelöscht bzw. umbenannt werden und jollix legt die Datei beim nächsten Booten wieder neu an mit den original Einstellungen. Man kann die Datei auch von Hand neu generieren, nachdem man sie gelöscht hat, mit dem Skript <span class="shell">mkxorgconf.sh</span> (als root). Dieses Skript wird auch beim Booten aufgerufen und erstellt dann die neue xorg.conf.</p>
+<table class="ncontent" width="100%" border="0" cellspacing="0" cellpadding="0"><tr><td bgcolor="#dbdbdb">
+<p class="note"><b></b></p>
+<pre>jollix / # mkxorgconf.sh
+ Video is ATI|Radeon R200 QL [Radeon 8500 LE], using XOrg-X11(radeon) Server
+ Monitor is Generic Monitor, H:28.0-96.0kHz, V:50.0-75.0Hz
+ Using Modes "1024x768" "800x600" "640x480"
+</pre>
+</td></tr></table>
+<p>Hat man bereits die original ATI Treiber installiert, so wie oben beschrieben, dann aber die xorg.conf nachträglich selbst editiert und wegen eines Fehlers gelöscht und wieder neu angelegt mit mkxorgconf.sh, dann fehlen die ATI spezifischen Angaben. Diese kann man auf einfache Weise durch den Aufruf von <span class="shell">opengl-update ati</span> auch noch nachträglich wieder setzen lassen, die Treiber müssen <b>nicht</b> wieder neu installiert werden. Experten können auch das ATI Konfigurationstool <span class="shell">fglrxconfig</span> benutzen, um eine auf die eigene ATI Karte und Bildschirm speziell angepasste Konfigurationsdatei zu generieren (zu finden unter /opt/ati/bin).<br>Informationen zum ATI Treiber und OpenGL liefert das Programm <span class="shell">glxinfo</span> (von Interesse ist die Zeile: direct rendering: Yes) sowie das Programm <span class="shell"> /opt/ati/bin/fglrxinfo</span>, das Programm <span class="shell">xvinfo</span> gibt Auskunft über die Video Extensions und <span class="shell">glxgears</span> startet eine kleine OpenGL 3D Animation, die aber auch ohne OpenGL Unterstützung des Grafikkartentreibers funktioniert, dann allerdings viel langsamer läuft wegen der fehlenden Hardwareunterstützung.</p>
 
 
 </td>
