--- a/jollix/public_html/de/de_docu03beta.html
+++ b/jollix/public_html/de/de_docu03beta.html
@@ -10,7 +10,7 @@
 
 <body link="#4379A0" alink="#62B1EA" vlink="#4D989D">
 <div id="text">
-	<table bgcolor="#DBF4FF" border="0" width="100%">
+	<table bgcolor="#f2f2f2" border="0" width="100%">
 		<tr>
 			<td width="263" valign="top" align="right">
 				<a href="de_home.html"><img src="../img/jollix-logo-128pt-blue2.jpg" alt="jollix" border="0"></a>
@@ -968,7 +968,7 @@ NVidia Treiber laden, Befehl modprobe</p></td></tr>
 <table class="ncontent" width="100%" border="0" cellspacing="0" cellpadding="0"><tr><td bgcolor="#dbdbdb">
 <p class="note"><b></b></p>
 <pre># /etc/modules.autoload.d/kernel-2.6:  kernel modules to load when system boots.
-# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/jollix/Repository/jollix/public_html/de/de_docu03beta.html,v 1.2 2004/05/05 16:39:43 knochen Exp $
+# $Header: /home/xubuntu/berlios_backup/github/tmp-cvs/jollix/Repository/jollix/public_html/de/de_docu03beta.html,v 1.3 2004/05/07 19:49:13 knochen Exp $
 #
 # Note that this file is for 2.6 kernels.
 #
