*** empty log message ***

--- a/jollix/public_html/en/en_features.html
+++ b/jollix/public_html/en/en_features.html
@@ -43,30 +43,20 @@
 	<table>
 		<tr>
 			<td valign="top">
-				<h4>Jollix 0.2 Features:</h4>
+				<h4>Jollix 0.3 Features:</h4>
 				<ul>
 					<li>based on <a href="http://www.gentoo.org" target="_blank">Gentoo Linux</a></li>
-  				<li>no hard disk installation necessary (LiveCD)</li>
+  				<li>LiveCD - No hard disk installation necessary</li>
 					<li>optimized for i686 architecture</li>
-  				<li>supports nVidia und ATI-based graphics cards with full 3D acceleration, other graphics cards use Vesa mode</li>
-					<li>Kernel: Gentoo 2.4.20-gaming-sources</li>
-  				<li>KDE 3.1.4</li>
-					<li>Many multimedia applications (xmms, mplayer, xine u.a.)</li>
-					<li>ISDN-support</li>
-					<li>Fritz!Card DSL</li>
-					<li>Wine Build 20030911</li>
-					<li><a href="http://www.linuxgames.com/xqf/" target="_blank">XQF</a>, game-server browser</li>
-					<li>Cheathing Death</li>
-					<li>Half-Life-, Public-Enemy- or Counter-Strike hard disk installations can
-						be used directly from the LiveCD!</li>
-					<li>Many bugfixes + current versions of installed software</li>
-					<li>Installation instructions for experienced linux users</li><br>
-					<li><a href="../common/packets.html" target="_blank">list of packets (in new window)</a></li>
+  				<li>Kudzu hardware detection</li>
+					<li>Linux Kernel: gentoo-dev-sources 2.6.5-r1</li>
+					<li>XOrg-X11 6.7.0</li>
+  				<li>KDE 3.2.2</li>
+					<li>Many multimedia applications (audacity, xmms, xine, kino, kdenlive, K3B)</li>
+										<li>WLAN and bluetooth support</li>
+					<li><a href="../common/packets.html" target="_blank">list</a> of installed applications (in a new window)</li>
 				</ul>
-				<h4>Known Bugs in 0.2:</h4>
-				<ul>
-					<li>??? (need your feedback)</li>
-				</ul>
+				<h4>Known Bugs in 0.3:</h4>
 				<h4>Planned changes and features for the next versions:</h4>
 				<ul>
 					<li>An <a href="http://graphics.cs.uni-sb.de/NMM/" target="_parent">NMM</a>-version,
