--- a/jollix/public_html/common/packets.html
+++ b/jollix/public_html/common/packets.html
@@ -38,7 +38,7 @@
 
 <p class="chaphead"><span class="chapnum">1.</span><a name="features">Features</a></p>
 <table class="ntable" width="60%" cellspacing="0" cellpadding="5" border="1">
-<tr><td width="30%" class="infohead" bgcolor="#eec625"><p>Features 0.2</p></td><td bgcolor="#eec625"></td></tr>
+<tr><td width="30%" class="infohead" bgcolor="#eec625"><p>Features 0.3</p></td><td bgcolor="#eec625"></td></tr>
 <tr><td bgcolor="#ffffff">Release</td><td bgcolor="#ffffff">xx.xx.2004</td></tr>
 <tr><td bgcolor="#ffffff">Price/Licence</td><td bgcolor="#ffffff">free/<a href="http://www.gnu.org/copyleft/copyleft.html#translations" target="_blank">GPL</a></td></tr>
 <tr><td bgcolor="#ffffff">CD</td><td bgcolor="#ffffff">1</td></tr>
@@ -61,29 +61,29 @@
 <tr><td bgcolor="#ffffff">sash</td><td bgcolor="#ffffff">3.6</td></tr>
 <tr><td bgcolor="#ffffff">perl</td><td bgcolor="#ffffff">5.8.2</td></tr>
 <tr><td bgcolor="#ffffff">python</td><td bgcolor="#ffffff">2.3.3</td></tr>
-<tr><td bgcolor="#ffffff">DirectFB</td><td bgcolor="#ffffff">0.9.19</td></tr>
-<tr><td bgcolor="#ffffff">openssl</td><td bgcolor="#ffffff">0.9.7d</td></tr>
-<tr><td bgcolor="#ffffff">glib</td><td bgcolor="#ffffff">2.2.3</td></tr>
-<tr><td bgcolor="#ffffff">qt</td><td bgcolor="#ffffff">3.3.0</td></tr>
+<tr><td bgcolor="#ffffff">DirectFB</td><td bgcolor="#ffffff">0.9.20</td></tr>
+<tr><td bgcolor="#ffffff">openssl</td><td bgcolor="#ffffff">0.9.7c</td></tr>
+<tr><td bgcolor="#ffffff">glib</td><td bgcolor="#ffffff">2.4.0</td></tr>
 </table>
 
 <p class="chaphead"><span class="chapnum">3.</span><a name="desktop">Desktop</a></p>
 <table class="ntable" width="60%" cellspacing="0" cellpadding="5" border="1">
 <tr><td width="30%" class="infohead" bgcolor="#eec625"><p>Desktop</p></td><td bgcolor="#eec625"></td></tr>
-<tr><td bgcolor="#ffffff"><a href="http://www.xfree86.org" target="_blank">xfree</a></td><td bgcolor="#ffffff">4.3.0</td></tr>
+<tr><td bgcolor="#ffffff"><a href="http://www.freedesktop.org/Software/xorg" target="_blank">xorg-X11</a></td><td bgcolor="#ffffff">6.7.0</td></tr>
+<tr><td bgcolor="#ffffff"><a href="http://www.trolltech.com" target="_blank">qt</a></td><td bgcolor="#ffffff">3.3.2</td></tr>
 <tr><td width="30%" class="infohead" bgcolor="#eec625"><p></p></td><td bgcolor="#eec625"></td></tr>
-<tr><td bgcolor="#ffffff"><a href="http://www.kde.org" target="_blank">kde-libs</td><td bgcolor="#ffffff">3.2.1</a></td></tr>
-<tr><td bgcolor="#ffffff">kde-base</td><td bgcolor="#ffffff">3.2.1</td></tr>
-<tr><td bgcolor="#ffffff">kde-admin</td><td bgcolor="#ffffff">3.2.1</td></tr>
-<tr><td bgcolor="#ffffff">kde-graphics</td><td bgcolor="#ffffff">3.2.1</td></tr>
-<tr><td bgcolor="#ffffff">kde-multimedia</td><td bgcolor="#ffffff">3.2.1</td></tr>
-<tr><td bgcolor="#ffffff">kde-network</td><td bgcolor="#ffffff">3.2.1</td></tr>
-<tr><td bgcolor="#ffffff">kde-utils</td><td bgcolor="#ffffff">3.2.1</td></tr>
-<tr><td bgcolor="#ffffff">kde-pim</td><td bgcolor="#ffffff">3.2.1</td></tr>
-<tr><td bgcolor="#ffffff">kde-sdk</td><td bgcolor="#ffffff">3.2.1</td></tr>
+<tr><td bgcolor="#ffffff"><a href="http://www.kde.org" target="_blank">kde-libs</td><td bgcolor="#ffffff">3.2.2</a></td></tr>
+<tr><td bgcolor="#ffffff">kde-base</td><td bgcolor="#ffffff">3.2.2</td></tr>
+<tr><td bgcolor="#ffffff">kde-admin</td><td bgcolor="#ffffff">3.2.2</td></tr>
+<tr><td bgcolor="#ffffff">kde-graphics</td><td bgcolor="#ffffff">3.2.2</td></tr>
+<tr><td bgcolor="#ffffff">kde-multimedia</td><td bgcolor="#ffffff">3.2.2</td></tr>
+<tr><td bgcolor="#ffffff">kde-network</td><td bgcolor="#ffffff">3.2.2</td></tr>
+<tr><td bgcolor="#ffffff">kde-utils</td><td bgcolor="#ffffff">3.2.2</td></tr>
+<tr><td bgcolor="#ffffff">kde-pim</td><td bgcolor="#ffffff">3.2.2</td></tr>
+<tr><td bgcolor="#ffffff">kde-sdk</td><td bgcolor="#ffffff">3.2.2</td></tr>
 <tr><td width="30%" class="infohead" bgcolor="#eec625"><p></p></td><td bgcolor="#eec625"></td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://netdragon.sourceforge.net" target="_blank">superkaramba</a></td><td bgcolor="#ffffff">0.33</td></tr>
-<tr><td bgcolor="#ffffff"><a href="http://www.kde-look.org/content/show.php?content=10567" target="_blank">KWin drop shadow patch</a></td><td bgcolor="#ffffff">0.3.9</td></tr>
+<tr><td bgcolor="#ffffff"><a href="http://www.kde-look.org/content/show.php?content=10567" target="_blank">KWin drop shadow patch</a></td><td bgcolor="#ffffff">0.8.0</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://www.fluxbox.org" target="_blank">Fluxbox</a></td><td bgcolor="#ffffff">0.9.8</td></tr>
 </table>
 
@@ -98,6 +98,7 @@
 <tr><td bgcolor="#ffffff"><a href="http://xine.sourceforge.net" target="_blank">xine-ui</a></td><td bgcolor="#ffffff">0.9.23</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://tvtime.net" target="_blank">tvtime</a></td><td bgcolor="#ffffff">0.9.12</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://www.uchian.pwp.blueyonder.co.uk/kdenlive.html" target="_blank">kdenlive</a></td><td bgcolor="#ffffff">0.2.4</td></tr>
+<tr><td bgcolor="#ffffff"><a href="http://kino.schirmacher.de" target="_blank">kino</a></td><td bgcolor="#ffffff">0.6.4</td></tr>
 </table>
 
 <p class="chaphead"><span class="chapnum">5.</span><a name="audio">Media Audio</a></p>
@@ -113,13 +114,13 @@
 <tr><td width="30%" class="infohead" bgcolor="#eec625"><p>Media Libraries</p></td><td bgcolor="#eec625"></td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://www.gstreamer.net/status" target="_blank">a52dec</a></td><td bgcolor="#ffffff">0.7.4</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://www.alsa-project.org" target="_blank">alsa-lib</a></td><td bgcolor="#ffffff">1.0.3b</td></tr>
-<tr><td bgcolor="#ffffff"><a href="http://oss.sgi.com/projects/audiofile" target="_blank">audiofile</a></td><td bgcolor="#ffffff">0.2.4</td></tr>
+<tr><td bgcolor="#ffffff"><a href="http://oss.sgi.com/projects/audiofile" target="_blank">audiofile</a></td><td bgcolor="#ffffff">0.2.5</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://multimedia.kde.org" target="_blank">arts</a></td><td bgcolor="#ffffff">1.2.1</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://heroinewarrior.com/libmpeg3.php3" target="_blank">libmpeg3</a></td><td bgcolor="#ffffff">1.5.2</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://libdv.sourceforge.net" target="_blank">libdv</a></td><td bgcolor="#ffffff">0.99</td></tr>
-<tr><td bgcolor="#ffffff"><a href="http://www.libsdl.org" target="_blank">libsdl</a></td><td bgcolor="#ffffff">1.2.6</td></tr>
+<tr><td bgcolor="#ffffff"><a href="http://www.libsdl.org" target="_blank">libsdl</a></td><td bgcolor="#ffffff">1.2.7</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://www.openal.org" target="_blank">openal</a></td><td bgcolor="#ffffff">20040303</td></tr>
-<tr><td bgcolor="#ffffff"><a href="http://xine.sourceforge.net" target="_blank">xine-lib</a></td><td bgcolor="#ffffff">1rc3</td></tr>
+<tr><td bgcolor="#ffffff"><a href="http://xine.sourceforge.net" target="_blank">xine-lib</a></td><td bgcolor="#ffffff">1rc4</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://www.xvid.org" target="_blank">xvid</a></td><td bgcolor="#ffffff">0.9.1</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://www.mp3dev.org/mp3/" target="_blank">lame</a></td><td bgcolor="#ffffff">3.93.1</td></tr>
 </table>
@@ -129,14 +130,14 @@
 <tr><td width="30%" class="infohead" bgcolor="#eec625"><p>Media GFX</p></td><td bgcolor="#eec625"></td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://www.gimp.org" target="_blank">gimp</a></td><td bgcolor="#ffffff">2.0.0</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://www.imagemagick.org" target="_blank">imagemagick</a></td><td bgcolor="#ffffff">5.5.7.15</td></tr>
-<tr><td bgcolor="#ffffff"><a href="http://www.gphoto.org" target="_blank">gphoto2</a></td><td bgcolor="#ffffff">2.1.3</td></tr>
+<tr><td bgcolor="#ffffff"><a href="http://www.gphoto.org" target="_blank">gphoto2</a></td><td bgcolor="#ffffff">2.1.4</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://digikam.sourceforge.net" target="_blank">digikam</a></td><td bgcolor="#ffffff">0.6</td></tr>
 </table>
 
 <p class="chaphead"><span class="chapnum">8.</span><a name="nfs">Network Filesystem</a></p>
 <table class="ntable" width="60%" cellspacing="0" cellpadding="5" border="1">
 <tr><td width="30%" class="infohead" bgcolor="#eec625"><p>Network</p></td><td bgcolor="#eec625"></td></tr>
-<tr><td bgcolor="#ffffff"><a href="http://www.samba.org" target="_blank">samba</a></td><td bgcolor="#ffffff">2.2.8a</td></tr>
+<tr><td bgcolor="#ffffff"><a href="http://www.samba.org" target="_blank">samba</a></td><td bgcolor="#ffffff">3.0.2a</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://smb4k.berlios.de/" target="_blank">Smb4K</a></td><td bgcolor="#ffffff">0.3.2</td></tr>
 </table>
 
@@ -144,8 +145,8 @@
 <table class="ntable" width="60%" cellspacing="0" cellpadding="5" border="1">
 <tr><td width="30%" class="infohead" bgcolor="#eec625"><p>Network Tools</p></td><td bgcolor="#eec625"></td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://kbear.sourceforge.net" target="_blank">kbear</a></td><td bgcolor="#ffffff">2.1.1</td></tr>
-<tr><td bgcolor="#ffffff"><a href="http://kopete.kde.org" target="_blank">kopete</a></td><td bgcolor="#ffffff">0.8.1</td></tr>
-<tr><td bgcolor="#ffffff"><a href="http://www.kvirc.net" target="_blank">kvirc</a></td><td bgcolor="#ffffff">3.0.0beta2</td></tr>
+<tr><td bgcolor="#ffffff"><a href="http://kopete.kde.org" target="_blank">kopete</a></td><td bgcolor="#ffffff">0.8.2</td></tr>
+<tr><td bgcolor="#ffffff"><a href="http://www.kvirc.net" target="_blank">kvirc</a></td><td bgcolor="#ffffff">3.0.0</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://irssi.org" target="_blank">irssi</a></td><td bgcolor="#ffffff">irssi-cvs 17.04.04</td></tr>
 </table>
 
@@ -159,7 +160,7 @@
 <p class="chaphead"><span class="chapnum">11.</span><a name="wireless">Network Wireless</a></p>
 <table class="ntable" width="60%" cellspacing="0" cellpadding="5" border="1">
 <tr><td width="30%" class="infohead" bgcolor="#eec625"><p>Net Dialup</p></td><td bgcolor="#eec625"></td></tr>
-<tr><td bgcolor="#ffffff"><a href="http://kde-bluetooth.sourceforge.net" target="_blank">kdebluetooth</a></td><td bgcolor="#ffffff">cvs-14.04.04</td></tr>
+<tr><td bgcolor="#ffffff"><a href="http://kde-bluetooth.sourceforge.net" target="_blank">kdebluetooth</a></td><td bgcolor="#ffffff">cvs-02.05.04</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://kwifimanager.sourceforge.net" target="_blank">kwifimanager</a></td><td bgcolor="#ffffff">1.0.2</td></tr>
 </table>
 
@@ -186,8 +187,8 @@
 <p class="chaphead"><span class="chapnum">14.</span><a name="editors">Editors</a></p>
 <table class="ntable" width="60%" cellspacing="0" cellpadding="5" border="1">
 <tr><td width="30%" class="infohead" bgcolor="#eec625"><p>Editors</p></td><td bgcolor="#eec625"></td></tr>
-<tr><td bgcolor="#ffffff"><a href="http://www.nano-editor.org" target="_blank">nano</a></td><td bgcolor="#ffffff">1.2.3</td></tr>
-<tr><td bgcolor="#ffffff"><a href="http://quanta.sourceforge.net" target="_blank">quanta</a></td><td bgcolor="#ffffff">3.2.1</td></tr>
+<tr><td bgcolor="#ffffff"><a href="http://www.nano-editor.org" target="_blank">nano</a></td><td bgcolor="#ffffff">1.3.2</td></tr>
+<tr><td bgcolor="#ffffff"><a href="http://quanta.sourceforge.net" target="_blank">quanta</a></td><td bgcolor="#ffffff">3.2.2</td></tr>
 <tr><td bgcolor="#ffffff"><a href="http://www.vim.org" target="_blank">vim</a></td><td bgcolor="#ffffff">6.2</td></tr>
 </table>
 
