--- a/jollix/public_html/de/de_download.html
+++ b/jollix/public_html/de/de_download.html
@@ -46,10 +46,11 @@
 				<p>HINWEIS: Jollix ist nicht käuflich! Die Entwickler untersagen
 				eine kommerzielle entgeltliche Weiterdistribution, sei es auch
 				nur für einen geringen Betrag, z.B. EUR 5,- für Versandkosten.</p>
+				<!--	
 				<b>Aktuelle Version:</b><br>
 				<ul>
 					<li><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2.1</a> [26.10.2003] ~500MB (berlios.de)
-
+                                 -->
 
 
 				<!--	<br><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">Hier</a> klicken oder einen Mirror benutzen!
@@ -78,11 +79,14 @@
 				<hr><br>
 				<b>Frühere Versionen</b>:<br>
 				<ul>
+				        <li>jollix 0.2.1 [26.10.2003]<br>
+						Zweite verbesserte Release<br>
+						Downloads der [0.2.1] bei berlios.de bis 06.05.2004: 36150</li>
 				        <li>jollix 0.2 [22.10.2003]<br>
 						Zweite Release<br>
 						Downloads der [0.2] bei berlios.de bis 26.10.2003: 5290 </li>
 					<li>jollix 0.1.1 [30.04.2003]<br>
-						Zweite verbesserte Release, CS/PE - Edition<br>
+						Erste verbesserte Release, CS/PE - Edition<br>
 						Downloads der [0.1.1] bei berlios.de bis 22.10.2003: 7874 </li>
 					<li>jollix 0.1 [17.04.2003]<br>
 						Erste Release, CS - Edition<br>
