--- a/jollix/public_html/de/de_features.html
+++ b/jollix/public_html/de/de_features.html
@@ -43,42 +43,25 @@
 	<table>
 		<tr>
 			<td valign="top">
-				<h4>Jollix 0.2 Features:</h4>
+				<h4>Jollix 0.3 Features:</h4>
 				<ul>
 					<li>basiert auf <a href="http://www.gentoo.org" target="_blank">Gentoo Linux</a></li>
-  				<li>zum Ausprobieren ist keine Installation auf der Festplatte notwendig</li>
+  				<li>LiveCD - Zum Ausprobieren ist keine Installation auf der Festplatte notwendig</li>
 					<li>Optimiert für i686 Architektur</li>
-  				<li>unterstützt nVidia und ATI-basierte Grafikkarten mit voller 3D Beschleunigung, alle anderen Grafikkarten mit Vesa Modus</li>
-					<li>Kernel: Gentoo 2.4.20-gaming-sources</li>
-  				<li>KDE 3.1.4</li>
-					<li>Viele Multimedia Anwendungen (xmms, mplayer, xine u.a.)</li>
-					<li>ISDN-Unterstützung</li>
-					<li>Fritz!Card DSL</li>
-					<li>Wine Build 20030911</li>
-					<li><a href="http://www.linuxgames.com/xqf/" target="_blank">XQF</a>, ein Game-Server Browser</li>
-					<li>Cheathing Death Unterstützung </li>
-					<li>Half-Life-, Public-Enemy- oder Counter-Strike Festplatteninstallation können direkt mit der LiveCD gespielt werden! </li>
-					<li>Viele Bugfixes + aktuelle Versionen der installierten Software</li>
-					<li>Installationsanleitung für erfahrene Linux User</li><br>
-					<li><a href="../common/packets.html" target="_blank">Paketliste (in neuem Fenster)</a></li>
+  				<li>Kudzu Hardware Erkennung</li>
+					<li>Linux Kernel: gentoo-dev-sources 2.6.5-r1</li>
+					<li>XOrg-X11 6.7.0</li>
+  				<li>KDE 3.2.2</li>
+					<li>Viele Multimedia Anwendungen (audacity, xmms, xine, kino, kdenlive, K3B, u.a.)</li>
+					<li>WLAN und Bluetooth Support</li>
+					<li><a href="../common/packets.html" target="_blank">Paketliste</a> (in neuem Fenster)</li>
 				</ul>
-				<h4>Known Bugs / Bekannte Fehler der 0.2:</h4>
-				<ul>
-					<li>Das ISDN Einwahlskript wird falsch erstellt. Nachdem der Konfigurationsdialog
-					 beendet ist, existiert die Datei /etc/ppp/peers/isdn/jollixISDN. In dieser muss
-					 von Hand hinter <pre>number</pre> die Telefonnummer des Providers eingetragen werden.
-					 Dort steht fälschlicherweise die IP-Adresse des DNS-Servers.<br>
-					 Wer jollix installiert hat, kann das fehlerbereinigte
-					 Konfigurations-Skript <a href="../common/isdn-setup.sh">isdn-setup.sh hier downloaden.</a>
-					 Nachdem das Skript (als root) in das Verzeichnis /usr/bin/ kopiert wurde muss noch
-					 <pre>chmod u+x /usr/bin/isdn-setup.sh</pre> ausgeführt werden.</li>
-				</ul>
+				<h4>Known Bugs/Bekannte Fehler der 0.3:</h4>
 				<h4>Geplante &Auml;nderungen und 	Features für die nächste Version:</h4>
 				<ul>
 					<li>Eine <a href="http://graphics.cs.uni-sb.de/NMM/" target="_parent">NMM</a> Version,
 						die die <a href="http://graphics.cs.uni-sb.de/NMM/Status/MMBox/index.html" target="_parent">MMBox</a>
 						startet: Verwandelt den PC in ein Netzwerk-taugliches Multimedia Home-Entertainment Center!</li>
-					<li>Diskettensicherung von Konfigurationsdateien (eventuell auch Harddisk- und USB-Stick-Sicherung)</li>
 				</ul>
 				<h4>Was jollix irgendwann mal k&ouml;nnen soll:</h4>
 				<ul>
