--- a/jollix/public_html/en/en_download.html
+++ b/jollix/public_html/en/en_download.html
@@ -44,10 +44,13 @@
 		<tr>
 			<td valign="top">
 			<p>Important information: A Commercial redistribution of jollix linux livecd is not allowed.</p> 
+			<!--
 				<b>Latest version:</b><br>
 
 				<ul>
 					<li><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">jollix 0.2.1</a> [26.10.2003] ~500MB (berlios.de)
+					
+			-->
 					<!--<br><a href="http://developer.berlios.de/project/showfiles.php?group_id=666&release_id=865" target="parent">Hier</a> klicken oder einen Mirror benutzen!</li>
 					-->
 				</ul>
@@ -74,15 +77,18 @@
 				<hr><br>
 				<b>Older versions</b>:<br>
 				<ul>
+				        <li>jollix 0.2.1 [26.10.2003]<br>
+						Second improved release<br>
+						[0.2.1] downloads at berlios.de until 06.05.2004: 36150</li>
 				        <li>jollix 0.2 [22.10.2003]<br>
 						Second release<br>
-						Downloads of [0.2] at berlios.de until 26.10.2003: 5290 </li>
+						[0.2] downloads at berlios.de until 26.10.2003: 5290 </li>
 					<li>jollix 0.1.1 [30.04.2003]<br>
-						Second improved release, CS/PE - Edition<br>
-						Downloads of [0.1.1] at berlios.de until 22.10.2003: 7874 </li>
+						First improved release, CS/PE - Edition<br>
+						[0.1.1] downloads at berlios.de until 22.10.2003: 7874 </li>
 					<li>jollix 0.1 [17.04.2003]<br>
 						First release, CS - Edition<br>
-						Downloads of [0.1] at berlios.de until 30.04.2003: 429 </li>
+						[0.1] downloads at berlios.de until 30.04.2003: 429 </li>
 				</ul>
 		 	</td>
 		</tr>
