--- a/jollix/public_html/en/en_news.html
+++ b/jollix/public_html/en/en_news.html
@@ -13,7 +13,7 @@
 	<table bgcolor="#f2f2f2" border="0" width="100%">
 		<tr>
 			<td width="263" valign="top" align="right">
-				<a href="de_home.html"><img src="../img/jollix-logo-128pt-blue2.jpg" alt="jollix" border="0"></a>
+				<a href="en_home.html"><img src="../img/jollix-logo-128pt-blue2.jpg" alt="jollix" border="0"></a>
 			</td>
 			<td width="20"></td>
 			<td id="btext" valign="top" align="left">Eine GNU/Linux Distribution basierend auf Gentoo Linux<br>A GNU/Linux distribution based on Gentoo Linux<br><br>
